--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Welcome to Flexton
 description: Flexton is a responsive and ultra-minimal theme for Jekyll.
 baseurl: "/flexton" # the subpath of your site, e.g. /blog
-url: "http://artemsheludko.pw/flexton" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://artemsheludko.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
 author-name:    Clayton Hanson
