--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example
 
 # Build settings
 markdown: kramdown
-permalink: ':title/'
+permalink: /:year/:month/:day/:title/
 plugins:
   - jekyll-paginate
 
