updated about author

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author-image:   ajalex_avatar.jpg
 author-job:     Software Engineer
 author-email:    # Add your email for contant form.
 author-twitter: ajalex114 # Add your twitter account
-about-author:   I am a Software Engineer. 
+about-author:   Software Engineer, Son, Brother, Husband, Father, ...
 
 # Social settings
 social-twitter:   ajalex114
