--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
+author-name:    H M Sabbir Ahmad
 author-image:   1.jpg
 author-job:     Web Developer
 author-email:   your-email@domain.com # Add your email for contant form.
