--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 title: Welcome to Flexton
 description: Flexton is a responsive and ultra-minimal theme for Jekyll.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "flexton.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: '' # the subpath of your site, e.g. /blog
+url: 'flexton.netlify.com' # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author
-author-name:    Clayton Hanson
-author-image:   1.jpg
-author-job:     Web Developer
-author-email:   your-email@domain.com # Add your email for contant form.
+author-name: 정현진
+author-image: 1.jpg
+author-job: Web Developer
+author-email: your-email@domain.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
-about-author:   I am a web developer focusing on front-end development. Always hungry to keep learning.
+about-author: I am a web developer focusing on front-end development. Always hungry to keep learning.
 
 # Social settings
-social-twitter:   artemsheludko_
+social-twitter: artemsheludko_
 social-facebook:
-social-github:    artemsheludko
+social-github: artemsheludko
 social-pinterest: artemsheludko
 social-instagram: artemsheludko_
 social-youtube:
-social-vk:   
+social-vk:
 social-linkedin:
 
 # Newsletter
@@ -37,7 +37,7 @@ plugins:
   - jekyll-paginate
 
 paginate: 7
-paginate_path: "/page/:num/"
+paginate_path: '/page/:num/'
 
 include:
   - _pages
