--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Welcome to Flexton
+title: 정현진의 블로그
 description: Flexton is a responsive and ultra-minimal theme for Jekyll.
 baseurl: '' # the subpath of your site, e.g. /blog
 url: 'flexton.netlify.com' # the base hostname & protocol for your site, e.g. http://example.com
