--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: 'flexton.netlify.com' # the base hostname & protocol for your site, e.g. ht
 # Author
 author-name: 정현진
 author-image: 1.jpg
-author-job: Web Developer
+author-job: 수정중
 author-email: your-email@domain.com # Add your email for contant form.
 author-twitter: artemsheludko_ # Add your twitter account
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning.
